[package]
name = "ex_monty"
version = "0.1.0"
edition = "2021"

[lib]
name = "ex_monty"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
monty = { path = "../../../monty/crates/monty" }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
postcard = { version = "1.1", features = ["alloc"] }

# Must match monty's workspace deps for ruff crates
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_parser", branch = "main" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_ast", branch = "main" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_text_size", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.9", features = ["serde"] }
