[package]
name = "ex_monty"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"

[lib]
name = "ex_monty"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37", features = ["big_integer"] }
monty = { git = "https://github.com/pydantic/monty.git", rev = "102630b29a677d199be9586a0bf98bf2467dba2f" }
num-bigint = "0.4"
postcard = { version = "1.1", features = ["alloc"] }

serde = { version = "1.0", features = ["derive"] }
